# docweave

./: .gitignore  CLAUDE.md  EXECPLAN-foundations-markdown-mvp.md  FEEDBACK-blackbox-2026-03-10.md  PROMPT.md  README.md  pyproject.toml  test.json
.claude/: settings.json
.claude/commands/: author.md
.claude/references/: patch-format.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: agentic_benchmark.py  agentic_results.json  architecture_annotated.md  architecture_plain.md  generate_agentic_doc.py  generate_test_files.py  large_annotated.md  large_plain.md  medium_annotated.md  medium_plain.md  results.json  run_benchmark.py  section_metadata.json  small_annotated.md  small_plain.md  xlarge_annotated.md  xlarge_plain.md
docs/: architecture.md  commands.md  examples.md  index.md  installation.md  patch-format.md  quickstart.md
docs/_patches/: architecture.yaml  commands.yaml  examples.yaml  index.yaml  installation.yaml  patch-format.yaml  quickstart.yaml
src/docweave/: __main__.py  anchors.py  cli.py  config.py  envelope.py  journal.py  models.py  validation.py
src/docweave/backends/: __init__.py  base.py  docx_annotations.py  docx_backend.py  markdown_native.py  registry.py
src/docweave/diff/: raw.py  semantic.py
src/docweave/evidence/: bundle.py
src/docweave/plan/: applier.py  applier_docx.py  planner.py  schema.py
tests/: conftest.py  create_sample_docx.py  test_anchors.py  test_annotations.py  test_blackbox_fix4.py  test_cli.py  test_cli_anchor.py  test_cli_fleet.py  test_cli_inspect.py  test_diff.py  test_docx_annotations.py  test_docx_apply.py  test_docx_backend.py  test_envelope.py  test_evidence.py  test_journal.py  test_markdown_backend.py  test_plan_apply.py  test_validation.py
tests/fixtures/: duplicate_headings.md  patch_delete_block.yaml  patch_insert_after.yaml  patch_insert_blockquote.yaml  patch_insert_code.yaml  patch_insert_heading.yaml  patch_replace_text.yaml  patch_set_heading.yaml  sample.docx  sample.md
tmp/patches/author_early_years/: patch_ch01.yaml  patch_ch02.yaml  patch_ch03.yaml  patch_ch04.yaml  patch_ch05.yaml  patch_ch06.yaml  patch_ch07.yaml  patch_ch08.yaml  patch_ch09.yaml  patch_ch10.yaml
tmp/patches/author_turning_points/: patch_ch16.yaml  patch_ch17.yaml  patch_ch18.yaml  patch_ch19.yaml  patch_ch20.yaml  patch_ch21.yaml  patch_ch22.yaml  patch_epilogue.yaml
