[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "docweave"
dynamic = ["version"]
description = "Agent-first CLI for structured document editing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Thomas Klok Rohde", email = "rohde.thomas@gmail.com" },
]
keywords = ["markdown", "cli", "document editing", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer[all]>=0.15",
    "pydantic>=2.0",
    "orjson>=3.9",
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ThomasRohde/docweave"
Repository = "https://github.com/ThomasRohde/docweave"
Issues = "https://github.com/ThomasRohde/docweave/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
docweave = "docweave.cli:main"

[tool.hatch.version]
path = "src/docweave/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docweave"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
